0.7.2

  * loads commenter picture/name from profile API
  * makes API endpoint with or without account slug depending on URL pattern
  * handles updates to django-storages>=1.14 properly

 -- Sebastien Mirolo <smirolo@djaodjin.com>  Thu, 11 Apr 2024 16:40:00 -0700

0.7.1

  * fixes URL routes regression introduced in version 0.7.0

 -- Sebastien Mirolo <smirolo@djaodjin.com>  Thu, 25 Jan 2024 12:35:00 -0700

0.7.0

  * generates usable OpenAPI 3 schema
  * adds sequences and user progress through a sequence
  * imports content of PageElement as a .docx

 -- Sebastien Mirolo <smirolo@djaodjin.com>  Thu, 18 Jan 2024 17:00:00 -0700

0.6.9

  * adds tags into practice description
  * compatibles with Bootstrap5
  * publishes distribution using pyproject.toml

 -- Sebastien Mirolo <smirolo@djaodjin.com>  Sat, 12 Aug 2023 19:30:00 -0700

0.6.8

  * supports for bleach 6.0 released Jan 2023 introducing breaking changes

 -- Sebastien Mirolo <smirolo@djaodjin.com>  Thu, 23 Feb 2023 17:25:00 -0700

0.6.7

  * redirects to uploaded document when assets APIis copy/pasted in URL bar

 -- Sebastien Mirolo <smirolo@djaodjin.com>  Sun,  6 Nov 2022 14:33:00 -0700

0.6.6

  * optionally loads content directly through View instead of API
  * LOCALE keys can be up to 8 characters

 -- Sebastien Mirolo <smirolo@djaodjin.com>  Thu,  8 Sep 2022 23:55:00 -0700

0.6.5

  * fixes uploaded document not found when going through S3 direct upload
  * compatibles with Django4.0

 -- Sebastien Mirolo <smirolo@djaodjin.com>  Fri, 19 Aug 2022 20:06:00 -0700

0.6.4

  * whitelists HTML tags used by PageElement editor
  * compatibles with bleach 5+

 -- Sebastien Mirolo <smirolo@djaodjin.com>  Tue,  9 Aug 2022 10:15:00 -0700

0.6.3

  * uses content API for non-leafs elements in PageElementView
  * fixes computation of number of pages in pagination

 -- Sebastien Mirolo <smirolo@djaodjin.com>  Wed,  5 Jul 2022 15:33:00 -0700

0.6.0

  * adds feature to upload documents