@@ -3,6 +3,7 @@
   * loads commenter picture/name from profile API
   * makes API endpoint with or without account slug depending on URL pattern
   * handles updates to django-storages>=1.14 properly
+  * newsfeed API for updates to PageElement a user follows (experimental)
 
  -- Sebastien Mirolo <smirolo@djaodjin.com>  Thu, 11 Apr 2024 16:40:00 -0700
 
